--- a/package.json
+++ b/package.json
@@ -5,34 +5,33 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "@emotion/css": "11.1.3",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.8.1",
-    "@types/jest-in-case": "1.0.4",
-    "@types/react-redux": "7.1.16",
-    "@types/react-test-renderer": "17.0.1",
-    "@types/redux-logger": "3.0.8",
-    "@types/redux-thunk": "2.1.0",
-    "jest": "26.6.3",
-    "jest-in-case": "1.0.2",
-    "prettier": "2.2.1",
+    "@emotion/css": "11.11.2",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest-in-case": "1.0.6",
+    "@types/react-redux": "7.1.27",
+    "@types/react-test-renderer": "18.0.3",
+    "@types/redux-logger": "3.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "3.1.4",
-    "react-redux": "7.2.2",
-    "react-router-dom": "6.3.0",
-    "react-scripts": "4.0.0",
-    "react-test-renderer": "18.2.0",
-    "react-testing-library": "8.0.1",
-    "redux": "4.0.5",
+    "react-error-boundary": "4.0.11",
+    "react-redux": "8.1.3",
+    "react-router-dom": "6.16.0",
+    "react-scripts": "5.0.1",
+    "redux": "4.2.1",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.4.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "typescript": "4.1.3"
+    "@testing-library/jest-dom": "6.1.3",
+    "@types/jest": "^29.5.5",
+    "@types/react": "18.2.25",
+    "@types/react-dom": "18.2.10",
+    "jest": "29.7.0",
+    "jest-in-case": "1.0.2",
+    "prettier": "3.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
