--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^29.5.5",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.10",
+    "alex": "^11.0.1",
     "jest": "29.7.0",
     "jest-in-case": "1.0.2",
     "prettier": "3.0.3",
@@ -38,7 +39,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check:docs": "alex *.md src/**/*.md"
   },
   "browserslist": [
     ">0.2%",
