--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.1.3",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.5",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.10",
@@ -47,14 +48,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "prettier": {
-    "arrowParens": "always",
-    "trailingComma": "all",
-    "semi": true,
-    "printWidth": 120,
-    "singleQuote": true,
-    "tabWidth": 2,
-    "useTabs": true
-  }
+  ]
 }
