--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"type": "module",
 	"dependencies": {
 		"@emotion/css": "^11.11.2",
+		"lodash": "^4.17.21",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.11",
@@ -30,6 +31,7 @@
 		"@testing-library/user-event": "^14.5.1",
 		"@types/jest": "^29.5.5",
 		"@types/jest-in-case": "^1.0.6",
+		"@types/lodash": "^4.14.202",
 		"@types/react": "^18.2.37",
 		"@types/react-dom": "^18.2.15",
 		"@types/react-redux": "^7.1.27",
