--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"redux-thunk": "^2.4.2"
 	},
 	"devDependencies": {
+    "@babel/eslint-parser": "^7.23.3",
 		"@testing-library/jest-dom": "^6.1.3",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/react-hooks": "^8.0.1",
@@ -37,8 +38,13 @@
 		"@types/react-redux": "^7.1.27",
 		"@types/react-test-renderer": "^18.0.3",
 		"@types/redux-logger": "^3.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"alex": "^11.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-in-case": "^1.0.2",
@@ -47,14 +53,16 @@
 		"react-test-renderer": "^18.2.0",
 		"ts-jest": "^29.1.1",
 		"typescript": "^5.2.2",
-		"vite": "^5.0.5"
+		"vite": "^5.0.0"
 	},
 	"scripts": {
 		"start": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"test": "jest",
-		"check:docs": "alex *.md src/**/*.md"
+		"check:docs": "alex *.md src/**/*.md",
+    "check:code": "pnpm run lint",
+    "lint": "eslint 'src/**/*.{js*,ts*}'"
 	},
 	"browserslist": [
 		">0.2%",
