--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 	"dependencies": {
 		"@emotion/css": "^11.11.2",
 		"lodash": "^4.17.21",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"react": "experimental",
+		"react-dom": "experimental",
 		"react-error-boundary": "^4.0.12",
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.22.0",
@@ -45,6 +45,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
+		"eslint-plugin-react-hooks": "0.0.0-experimental-ad720f36e-20240206",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"jest-in-case": "^1.0.2",
