--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"@vitejs/plugin-react-swc": "^3.6.0",
 		"alex": "^11.0.1",
 		"eslint-config-prettier": "^9.1.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
+		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "0.0.0-experimental-ad720f36e-20240206",
@@ -63,8 +65,8 @@
 		"test": "jest",
 		"check:all": "pnpm run check:docs && pnpm run check:code",
 		"check:docs": "alex *.md src/**/*.md",
-    "check:code": "pnpm run lint",
-    "lint": "eslint 'src/**/*.{js*,ts*}'"
+		"check:code": "pnpm run lint",
+		"lint": "eslint 'src/**/*.{js*,ts*}'"
 	},
 	"browserslist": [
 		">0.2%",
