--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"type": "module",
 	"dependencies": {
 		"@emotion/css": "^11.11.2",
+		"axios": "^1.6.7",
 		"lodash": "^4.17.21",
 		"react": "experimental",
 		"react-dom": "experimental",
