--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "ES2015",
 		"useDefineForClassFields": true,
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
-		"module": "ES2015",
+		"module": "ESNext",
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"moduleResolution": "Node",
